--- a/docs/pages/style.css
+++ b/docs/pages/style.css
@@ -8,7 +8,9 @@ strong.time {
 }
 
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     margin-top: 1em;
 }
 
@@ -16,7 +18,7 @@ span.checked {
     text-decoration: line-through;
 }
 
-li:has( span.checked)::after {
+li:has(span.checked)::after {
     content: " (prenotato)"
 }
 
@@ -24,4 +26,39 @@ li:has( span.checked)::after {
     border-radius: 3px;
     background-color: rgb(248, 249, 250);
     padding: 1em;
+}
+
+table.yt-time {
+    margin-top: 2em;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table.yt-time,
+table.yt-time th,
+table.yt-time td {
+    border: 1px solid #ddd;
+}
+
+table.yt-time th,
+table.yt-time td {
+    padding: 8px;
+}
+
+table.yt-time tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+
+table.yt-time tr:hover{
+    background-color: #ddd;
+}
+
+table.yt-time th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #ddd;
+    color: #505050;
+  }
+    
 }
