--- a/docs/style.css
+++ b/docs/style.css
@@ -201,6 +201,7 @@ footer {
   height: 0;
   padding-bottom: 56.25%;
 }
+
 .video {
   position: absolute;
   top: 0;
@@ -223,5 +224,9 @@ footer {
 }
 
 .space-top {
+  margin-top: 1em;
+}
+
+.top-space {
   margin-top: 1em;
 }
